GrammarParser.py
# Generated from D:/Python/Compiler\Grammar.g4 by ANTLR 4.5.1
# encoding: utf-8
from antlr4 import *
from io import StringIO


from entity.Program import Program
from entity.Variable import Variable
from entity.Function import *
from entity.Expression import *
from entity.Type import Type
from entity.Scalar import *
from entity.Statement import *



class GrammarParser ( Parser ):

    grammarFileName = "Grammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'void'", "'('", "')'", "','", "'{'", 
                     "'}'", "'if'", "'else'", "'while'", "'return'", "';'", 
                     "'boolean'", "'int'", "'='", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'<='", "'>='", "'>'", "'<'", "'=='", "'!='", 
                     "'&&'", "'||'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "Identifier", "IntegerLiteral", "BooleanLiteral", 
                      "WS", "COMMENT" ]

    RULE_program = 0
    RULE_programElement = 1
    RULE_functionDeclaration = 2
    RULE_formalParameters = 3
    RULE_formalParameterList = 4
    RULE_formalParameter = 5
    RULE_block = 6
    RULE_blockStatement = 7
    RULE_statement = 8
    RULE_brackedStatement = 9
    RULE_parExpression = 10
    RULE_callFunction = 11
    RULE_variableDeclaration = 12
    RULE_valueType = 13
    RULE_variableDeclarator = 14
    RULE_expression = 15
    RULE_expressionList = 16
    RULE_primary = 17
    RULE_literal = 18

    ruleNames =  [ "program", "programElement", "functionDeclaration", "formalParameters", 
                   "formalParameterList", "formalParameter", "block", "blockStatement", 
                   "statement", "brackedStatement", "parExpression", "callFunction", 
                   "variableDeclaration", "valueType", "variableDeclarator", 
                   "expression", "expressionList", "primary", "literal" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    Identifier=28
    IntegerLiteral=29
    BooleanLiteral=30
    WS=31
    COMMENT=32

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.5.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



        self.program_states = Program()


    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._programElement = None # ProgramElementContext

        def EOF(self):
            return self.getToken(GrammarParser.EOF, 0)

        def programElement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrammarParser.ProgramElementContext)
            else:
                return self.getTypedRuleContext(GrammarParser.ProgramElementContext,i)


        def getRuleIndex(self):
            return GrammarParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = GrammarParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GrammarParser.T__0) | (1 << GrammarParser.T__11) | (1 << GrammarParser.T__12))) != 0):
                self.state = 38
                localctx._programElement = self.programElement()
                self.program_states.add(localctx._programElement.element)
                self.state = 45
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 46
            self.match(GrammarParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProgramElementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.element =  None
            self._functionDeclaration = None # FunctionDeclarationContext
            self._variableDeclaration = None # VariableDeclarationContext

        def functionDeclaration(self):
            return self.getTypedRuleContext(GrammarParser.FunctionDeclarationContext,0)


        def variableDeclaration(self):
            return self.getTypedRuleContext(GrammarParser.VariableDeclarationContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_programElement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgramElement" ):
                listener.enterProgramElement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgramElement" ):
                listener.exitProgramElement(self)




    def programElement(self):

        localctx = GrammarParser.ProgramElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_programElement)
        try:
            self.state = 54
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 48
                localctx._functionDeclaration = self.functionDeclaration()
                localctx.element = localctx._functionDeclaration.function
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 51
                localctx._variableDeclaration = self.variableDeclaration()
                localctx.element = localctx._variableDeclaration.variable
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.function =  None
            self._valueType = None # ValueTypeContext
            self._Identifier = None # Token
            self._formalParameters = None # FormalParametersContext
            self._block = None # BlockContext

        def valueType(self):
            return self.getTypedRuleContext(GrammarParser.ValueTypeContext,0)


        def Identifier(self):
            return self.getToken(GrammarParser.Identifier, 0)

        def formalParameters(self):
            return self.getTypedRuleContext(GrammarParser.FormalParametersContext,0)


        def block(self):
            return self.getTypedRuleContext(GrammarParser.BlockContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_functionDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDeclaration" ):
                listener.enterFunctionDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDeclaration" ):
                listener.exitFunctionDeclaration(self)




    def functionDeclaration(self):

        localctx = GrammarParser.FunctionDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_functionDeclaration)
        try:
            self.state = 68
            token = self._input.LA(1)
            if token in [GrammarParser.T__11, GrammarParser.T__12]:
                self.enterOuterAlt(localctx, 1)
                self.state = 56
                localctx._valueType = self.valueType()
                self.state = 57
                localctx._Identifier = self.match(GrammarParser.Identifier)
                self.state = 58
                localctx._formalParameters = self.formalParameters()
                self.state = 59
                localctx._block = self.block()
                localctx.function = get_function(localctx._valueType.value_type, (None if localctx._Identifier is None else localctx._Identifier.text), localctx._formalParameters.params, localctx._block.statements)

            elif token in [GrammarParser.T__0]:
                self.enterOuterAlt(localctx, 2)
                self.state = 62
                self.match(GrammarParser.T__0)
                self.state = 63
                localctx._Identifier = self.match(GrammarParser.Identifier)
                self.state = 64
                localctx._formalParameters = self.formalParameters()
                self.state = 65
                localctx._block = self.block()
                localctx.function = get_function(None, (None if localctx._Identifier is None else localctx._Identifier.text), localctx._formalParameters.params, localctx._block.statements)

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FormalParametersContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.params =  None
            self._formalParameterList = None # FormalParameterListContext

        def formalParameterList(self):
            return self.getTypedRuleContext(GrammarParser.FormalParameterListContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_formalParameters

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormalParameters" ):
                listener.enterFormalParameters(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormalParameters" ):
                listener.exitFormalParameters(self)




    def formalParameters(self):

        localctx = GrammarParser.FormalParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_formalParameters)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(GrammarParser.T__1)
            self.state = 74
            _la = self._input.LA(1)
            if _la==GrammarParser.T__11 or _la==GrammarParser.T__12:
                self.state = 71
                localctx._formalParameterList = self.formalParameterList()
                localctx.params = localctx._formalParameterList.params


            self.state = 76
            self.match(GrammarParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FormalParameterListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.params =  None
            self._formalParameter = None # FormalParameterContext

        def formalParameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrammarParser.FormalParameterContext)
            else:
                return self.getTypedRuleContext(GrammarParser.FormalParameterContext,i)


        def getRuleIndex(self):
            return GrammarParser.RULE_formalParameterList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormalParameterList" ):
                listener.enterFormalParameterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormalParameterList" ):
                listener.exitFormalParameterList(self)




    def formalParameterList(self):

        localctx = GrammarParser.FormalParameterListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_formalParameterList)
        localctx.params = []
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            localctx._formalParameter = self.formalParameter()
            localctx.params.append(localctx._formalParameter.variable)
            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==GrammarParser.T__3:
                self.state = 80
                self.match(GrammarParser.T__3)
                self.state = 81
                localctx._formalParameter = self.formalParameter()
                localctx.params.append(localctx._formalParameter.variable)
                self.state = 88
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FormalParameterContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.variable =  None
            self._valueType = None # ValueTypeContext
            self._Identifier = None # Token

        def valueType(self):
            return self.getTypedRuleContext(GrammarParser.ValueTypeContext,0)


        def Identifier(self):
            return self.getToken(GrammarParser.Identifier, 0)

        def getRuleIndex(self):
            return GrammarParser.RULE_formalParameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormalParameter" ):
                listener.enterFormalParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormalParameter" ):
                listener.exitFormalParameter(self)




    def formalParameter(self):

        localctx = GrammarParser.FormalParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_formalParameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            localctx._valueType = self.valueType()
            self.state = 90
            localctx._Identifier = self.match(GrammarParser.Identifier)
            localctx.variable = Variable(localctx._valueType.value_type, (None if localctx._Identifier is None else localctx._Identifier.text))
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.statements =  None
            self._blockStatement = None # BlockStatementContext

        def blockStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrammarParser.BlockStatementContext)
            else:
                return self.getTypedRuleContext(GrammarParser.BlockStatementContext,i)


        def getRuleIndex(self):
            return GrammarParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = GrammarParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_block)
        localctx.statements = []
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(GrammarParser.T__4)
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GrammarParser.T__1) | (1 << GrammarParser.T__6) | (1 << GrammarParser.T__8) | (1 << GrammarParser.T__9) | (1 << GrammarParser.T__11) | (1 << GrammarParser.T__12) | (1 << GrammarParser.T__14) | (1 << GrammarParser.T__15) | (1 << GrammarParser.Identifier) | (1 << GrammarParser.IntegerLiteral) | (1 << GrammarParser.BooleanLiteral))) != 0):
                self.state = 94
                localctx._blockStatement = self.blockStatement()
                localctx.statements.append(localctx._blockStatement.state)
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 102
            self.match(GrammarParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.state =  None
            self._variableDeclaration = None # VariableDeclarationContext
            self._statement = None # StatementContext

        def variableDeclaration(self):
            return self.getTypedRuleContext(GrammarParser.VariableDeclarationContext,0)


        def statement(self):
            return self.getTypedRuleContext(GrammarParser.StatementContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_blockStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockStatement" ):
                listener.enterBlockStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockStatement" ):
                listener.exitBlockStatement(self)




    def blockStatement(self):

        localctx = GrammarParser.BlockStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_blockStatement)
        try:
            self.state = 110
            token = self._input.LA(1)
            if token in [GrammarParser.T__11, GrammarParser.T__12]:
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                localctx._variableDeclaration = self.variableDeclaration()
                localctx.state = localctx._variableDeclaration.variable

            elif token in [GrammarParser.T__1, GrammarParser.T__6, GrammarParser.T__8, GrammarParser.T__9, GrammarParser.T__14, GrammarParser.T__15, GrammarParser.Identifier, GrammarParser.IntegerLiteral, GrammarParser.BooleanLiteral]:
                self.enterOuterAlt(localctx, 2)
                self.state = 107
                localctx._statement = self.statement()
                localctx.state = localctx._statement.state

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.state =  None
            self._parExpression = None # ParExpressionContext
            self._brackedStatement = None # BrackedStatementContext
            self._expression = None # ExpressionContext
            self._callFunction = None # CallFunctionContext

        def parExpression(self):
            return self.getTypedRuleContext(GrammarParser.ParExpressionContext,0)


        def brackedStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrammarParser.BrackedStatementContext)
            else:
                return self.getTypedRuleContext(GrammarParser.BrackedStatementContext,i)


        def expression(self):
            return self.getTypedRuleContext(GrammarParser.ExpressionContext,0)


        def callFunction(self):
            return self.getTypedRuleContext(GrammarParser.CallFunctionContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = GrammarParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_statement)
        tmp_var = None
        self._la = 0 # Token type
        try:
            self.state = 140
            token = self._input.LA(1)
            if token in [GrammarParser.T__6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 112
                self.match(GrammarParser.T__6)
                self.state = 113
                localctx._parExpression = self.parExpression()
                self.state = 114
                localctx._brackedStatement = self.brackedStatement()
                self.state = 119
                _la = self._input.LA(1)
                if _la==GrammarParser.T__7:
                    self.state = 115
                    self.match(GrammarParser.T__7)
                    self.state = 116
                    localctx._brackedStatement = self.brackedStatement()
                    tmp_var = ElseStatement(localctx._brackedStatement.statements)


                localctx.state = IfStatement(localctx._parExpression.expr, localctx._brackedStatement.statements, tmp_var)

            elif token in [GrammarParser.T__8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 123
                self.match(GrammarParser.T__8)
                self.state = 124
                localctx._parExpression = self.parExpression()
                self.state = 125
                localctx._brackedStatement = self.brackedStatement()
                localctx.state = WhileStatement(localctx._parExpression.expr, localctx._brackedStatement.statements)

            elif token in [GrammarParser.T__9]:
                self.enterOuterAlt(localctx, 3)
                self.state = 128
                self.match(GrammarParser.T__9)
                self.state = 132
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GrammarParser.T__1) | (1 << GrammarParser.T__14) | (1 << GrammarParser.T__15) | (1 << GrammarParser.Identifier) | (1 << GrammarParser.IntegerLiteral) | (1 << GrammarParser.BooleanLiteral))) != 0):
                    self.state = 129
                    localctx._expression = self.expression(0)
                    tmp_var = localctx._expression.expr


                self.state = 134
                self.match(GrammarParser.T__10)
                localctx.state = ReturnStatement(tmp_var)

            elif token in [GrammarParser.T__1, GrammarParser.T__14, GrammarParser.T__15, GrammarParser.Identifier, GrammarParser.IntegerLiteral, GrammarParser.BooleanLiteral]:
                self.enterOuterAlt(localctx, 4)
                self.state = 136
                localctx._callFunction = self.callFunction()
                self.state = 137
                self.match(GrammarParser.T__10)
                localctx.state = localctx._callFunction.expr

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BrackedStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.statements =  None
            self._blockStatement = None # BlockStatementContext

        def blockStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrammarParser.BlockStatementContext)
            else:
                return self.getTypedRuleContext(GrammarParser.BlockStatementContext,i)


        def getRuleIndex(self):
            return GrammarParser.RULE_brackedStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBrackedStatement" ):
                listener.enterBrackedStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBrackedStatement" ):
                listener.exitBrackedStatement(self)




    def brackedStatement(self):

        localctx = GrammarParser.BrackedStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_brackedStatement)
        localctx.statements = []
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(GrammarParser.T__4)
            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GrammarParser.T__1) | (1 << GrammarParser.T__6) | (1 << GrammarParser.T__8) | (1 << GrammarParser.T__9) | (1 << GrammarParser.T__11) | (1 << GrammarParser.T__12) | (1 << GrammarParser.T__14) | (1 << GrammarParser.T__15) | (1 << GrammarParser.Identifier) | (1 << GrammarParser.IntegerLiteral) | (1 << GrammarParser.BooleanLiteral))) != 0):
                self.state = 143
                localctx._blockStatement = self.blockStatement()
                localctx.statements.append(localctx._blockStatement.state)
                self.state = 150
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 151
            self.match(GrammarParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.expr =  None
            self._expression = None # ExpressionContext

        def expression(self):
            return self.getTypedRuleContext(GrammarParser.ExpressionContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_parExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParExpression" ):
                listener.enterParExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParExpression" ):
                listener.exitParExpression(self)




    def parExpression(self):

        localctx = GrammarParser.ParExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_parExpression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.match(GrammarParser.T__1)
            self.state = 154
            localctx._expression = self.expression(0)
            self.state = 155
            self.match(GrammarParser.T__2)
            localctx.expr = localctx._expression.expr
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CallFunctionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.expr =  None
            self._expression = None # ExpressionContext

        def expression(self):
            return self.getTypedRuleContext(GrammarParser.ExpressionContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_callFunction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCallFunction" ):
                listener.enterCallFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCallFunction" ):
                listener.exitCallFunction(self)




    def callFunction(self):

        localctx = GrammarParser.CallFunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_callFunction)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            localctx._expression = self.expression(0)
            localctx.expr = localctx._expression.expr
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VariableDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.variable =  None
            self._valueType = None # ValueTypeContext
            self._variableDeclarator = None # VariableDeclaratorContext

        def valueType(self):
            return self.getTypedRuleContext(GrammarParser.ValueTypeContext,0)


        def variableDeclarator(self):
            return self.getTypedRuleContext(GrammarParser.VariableDeclaratorContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_variableDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDeclaration" ):
                listener.enterVariableDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDeclaration" ):
                listener.exitVariableDeclaration(self)




    def variableDeclaration(self):

        localctx = GrammarParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_variableDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            localctx._valueType = self.valueType()
            self.state = 162
            localctx._variableDeclarator = self.variableDeclarator()
            self.state = 163
            self.match(GrammarParser.T__10)
            localctx.variable = Variable(localctx._valueType.value_type, localctx._variableDeclarator.name_value[0], localctx._variableDeclarator.name_value[1])
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ValueTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value_type =  None


        def getRuleIndex(self):
            return GrammarParser.RULE_valueType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValueType" ):
                listener.enterValueType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValueType" ):
                listener.exitValueType(self)




    def valueType(self):
